--- a/SpringBootDemo/pom.xml
+++ b/SpringBootDemo/pom.xml
@@ -21,13 +21,38 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.11</junit.version>
 		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
-		<java.version>1.6</java.version>
+		<dubbo.version>2.5.5</dubbo.version>
+		<zookeeper.version>3.4.6</zookeeper.version>  
 	</properties>
 
 	<dependencies>
 		<dependency>
+		    <groupId>io.dubbo.springboot</groupId>
+		    <artifactId>spring-boot-starter-dubbo</artifactId>
+		    <version>1.0.0</version>
+		 </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>  
+            <groupId>com.alibaba</groupId>  
+            <artifactId>dubbo</artifactId>  
+            <exclusions>  
+                <exclusion>  
+                    <groupId>org.springframework</groupId>  
+                    <artifactId>spring</artifactId>  
+                </exclusion>  
+            </exclusions>  
+            <version>${dubbo.version}</version>  
+        </dependency>  
 	</dependencies>
+	<build>  
+        <plugins>  
+            <plugin>  
+                <groupId>org.springframework.boot</groupId>  
+                <artifactId>spring-boot-maven-plugin</artifactId> 
+            </plugin>  
+        </plugins>  
+    </build>  
 </project>
