--- a/SpringBootDemo/pom.xml
+++ b/SpringBootDemo/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
+  	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.0.RELEASE</version>
@@ -23,6 +23,8 @@
 		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
 		<dubbo.version>2.5.5</dubbo.version>
 		<zookeeper.version>3.4.6</zookeeper.version>  
+		<rocketmq.version>4.2.0</rocketmq.version>
+		<os.detected.classifier>_x86_64</os.detected.classifier>
 	</properties>
 
 	<dependencies>
@@ -46,6 +48,49 @@
             </exclusions>  
             <version>${dubbo.version}</version>  
         </dependency>  
+		<dependency>
+		    <groupId>org.apache.rocketmq</groupId>
+		    <artifactId>rocketmq-all</artifactId>
+		    <version>${rocketmq.version}</version>
+		    <type>pom</type>
+		</dependency>
+        <dependency>
+		    <groupId>org.apache.rocketmq</groupId>
+		    <artifactId>rocketmq-namesrv</artifactId>
+		    <version>${rocketmq.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.rocketmq</groupId>
+		    <artifactId>rocketmq-broker</artifactId>
+		    <exclusions>
+			 <exclusion>
+			  <groupId>io.netty</groupId>
+			  <artifactId>netty-tcnative</artifactId>
+			 </exclusion>
+			</exclusions>
+		    <version>${rocketmq.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.rocketmq</groupId>
+		    <artifactId>rocketmq-common</artifactId>
+		    <exclusions>
+			 <exclusion>
+			  <groupId>io.netty</groupId>
+			  <artifactId>netty-tcnative</artifactId>
+			 </exclusion>
+			</exclusions>
+		    <version>${rocketmq.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>  
         <plugins>  
