--- a/SpringBootDemo/pom.xml
+++ b/SpringBootDemo/pom.xml
@@ -5,7 +5,7 @@
   	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.0.RELEASE</version>
+		<version>1.5.3.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -25,9 +25,15 @@
 		<zookeeper.version>3.4.6</zookeeper.version>  
 		<rocketmq.version>4.2.0</rocketmq.version>
 		<os.detected.classifier>_x86_64</os.detected.classifier>
+		<spring.version>4.3.8.RELEASE</spring.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <scope>test</scope>
+		</dependency>
 		<dependency>
 		    <groupId>io.dubbo.springboot</groupId>
 		    <artifactId>spring-boot-starter-dubbo</artifactId>
@@ -90,6 +96,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>  
