--- a/SpringBootDemo/src/main/resources/application.properties
+++ b/SpringBootDemo/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.dubbo.registry.address=zookeeper://localhost:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
 spring.dubbo.scan=com.hpay.springboot
+
+logging.level.root=WARN
