--- a/SpringBootDemo/src/main/resources/application.properties
+++ b/SpringBootDemo/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.dubbo.protocol.port=20880
 spring.dubbo.scan=com.hpay.springboot
 
 logging.level.root=WARN
+logging.level.com.hpay.springboot=DEBUG
