--- a/SpringBootDemo/pom.xml
+++ b/SpringBootDemo/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  	<parent>
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.3.RELEASE</version>
@@ -22,70 +22,98 @@
 		<junit.version>4.11</junit.version>
 		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
 		<dubbo.version>2.5.5</dubbo.version>
-		<zookeeper.version>3.4.6</zookeeper.version>  
+		<zookeeper.version>3.4.6</zookeeper.version>
 		<rocketmq.version>4.2.0</rocketmq.version>
-		<os.detected.classifier>_x86_64</os.detected.classifier>
 		<spring.version>4.3.8.RELEASE</spring.version>
+		<shiro.version>1.3.2</shiro.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-test</artifactId>
-		    <scope>test</scope>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
 		</dependency>
 		<dependency>
-		    <groupId>io.dubbo.springboot</groupId>
-		    <artifactId>spring-boot-starter-dubbo</artifactId>
-		    <version>1.0.0</version>
-		 </dependency>
+		    <groupId>org.apache.shiro</groupId>
+		    <artifactId>shiro-ehcache</artifactId>
+		    <version>${shiro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>${shiro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.dubbo.springboot</groupId>
+			<artifactId>spring-boot-starter-dubbo</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>  
-            <groupId>com.alibaba</groupId>  
-            <artifactId>dubbo</artifactId>  
-            <exclusions>  
-                <exclusion>  
-                    <groupId>org.springframework</groupId>  
-                    <artifactId>spring</artifactId>  
-                </exclusion>  
-            </exclusions>  
-            <version>${dubbo.version}</version>  
-        </dependency>  
 		<dependency>
-		    <groupId>org.apache.rocketmq</groupId>
-		    <artifactId>rocketmq-all</artifactId>
-		    <version>${rocketmq.version}</version>
-		    <type>pom</type>
-		</dependency>
-        <dependency>
-		    <groupId>org.apache.rocketmq</groupId>
-		    <artifactId>rocketmq-namesrv</artifactId>
-		    <version>${rocketmq.version}</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.apache.rocketmq</groupId>
-		    <artifactId>rocketmq-broker</artifactId>
-		    <exclusions>
-			 <exclusion>
-			  <groupId>io.netty</groupId>
-			  <artifactId>netty-tcnative</artifactId>
-			 </exclusion>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
 			</exclusions>
-		    <version>${rocketmq.version}</version>
+			<version>${dubbo.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.rocketmq</groupId>
-		    <artifactId>rocketmq-common</artifactId>
-		    <exclusions>
-			 <exclusion>
-			  <groupId>io.netty</groupId>
-			  <artifactId>netty-tcnative</artifactId>
-			 </exclusion>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-all</artifactId>
+			<version>${rocketmq.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-namesrv</artifactId>
+			<version>${rocketmq.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-broker</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-tcnative</artifactId>
+				</exclusion>
 			</exclusions>
-		    <version>${rocketmq.version}</version>
+			<version>${rocketmq.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.rocketmq</groupId>
+			<artifactId>rocketmq-common</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-tcnative</artifactId>
+				</exclusion>
+			</exclusions>
+			<version>${rocketmq.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -98,18 +126,18 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-		    <groupId>junit</groupId>
-		    <artifactId>junit</artifactId>
-		    <version>4.12</version>
-		    <scope>test</scope>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>  
-        <plugins>  
-            <plugin>  
-                <groupId>org.springframework.boot</groupId>  
-                <artifactId>spring-boot-maven-plugin</artifactId> 
-            </plugin>  
-        </plugins>  
-    </build>  
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
