--- a/SpringBootDemo/src/main/resources/application.properties
+++ b/SpringBootDemo/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.dubbo.application.name=provider
 spring.dubbo.registry.address=zookeeper://localhost:2181
 spring.dubbo.protocol.name=dubbo
 spring.dubbo.protocol.port=20880
-spring.dubbo.scan=com.hpay.springboot
+spring.dubbo.scan=com.hpay.springboot.dubbo
+
+#ehcache缓存
+spring.cache.type=EHCACHE
+spring.cache.ehcache.config=classpath:ehcache.xml
 
 logging.level.root=WARN
 logging.level.com.hpay.springboot=DEBUG
